# unibotsUK

./: .dockerignore  .gitconfig  .gitignore  CLAUDE.md  README.md  TUNING.md  distrobox.ini  flake.nix  rulebook-unibots.txt  setup.sh  shell.nix  unibots_guide.md
deploy/: INSTRUCTIONS.md  README.md  build.env  build.sh  packages.apt  run.sh  runtime.env
deploy/ansible/: ansible.cfg  inventory.ini  requirements.yml  site.yml
deploy/ansible/group_vars/: all.yml
deploy/artifacts/: README.md
deploy/cross-build/: README.md  cross-build.sh  provision-and-build.sh
deploy/docker/: Dockerfile  buildx.sh  docker-compose.yml  entrypoint.sh  unibots.service
docs/: LOCALIZATION_ODOM_ISSUE.md
nixos/: configuration.nix  workspace.nix
training/: read_pdf.py  train_unibots.ipynb  unibots_training.ipynb
unibots_ws/generated_solver/: CMakeLists.txt  README.html  cpg_solver.py  pyproject.toml
unibots_ws/generated_solver/c/: CMakeLists.txt
unibots_ws/generated_solver/c/include/: cpg_solve.h  cpg_workspace.h
unibots_ws/generated_solver/c/solver_code/: bindings.cpp  emosqp.c  osqp_configure.h  setup.py  workspace.c  workspace.h
unibots_ws/generated_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
unibots_ws/generated_solver/cpg_module-0.0.1.dist-info/: METADATA  RECORD  direct_url.json
unibots_ws/generated_solver/cpp/include/: cpg_module.hpp
unibots_ws/generated_solver/cpp/src/: cpg_module.cpp
unibots_ws/src/unibots_behavior_tree/: README.md  package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_behavior_tree/config/: bt_config.yaml
unibots_ws/src/unibots_behavior_tree/launch/: behavior_tree.launch.py
unibots_ws/src/unibots_behavior_tree/unibots_behavior_tree/: behaviors.py  main_tree_node.py
unibots_ws/src/unibots_bt/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_bt/bt/: game_tree.xml
unibots_ws/src/unibots_bt/config/: bt_game.yaml
unibots_ws/src/unibots_bt/include/unibots_bt/: bt_nodes.hpp  game_context.hpp
unibots_ws/src/unibots_bt/launch/: bt_game.launch.py  match.launch.py
unibots_ws/src/unibots_bt/src/: bt_game_node.cpp
unibots_ws/src/unibots_camera/: package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_camera/unibots_camera/: camera_node.py  debug_visualiser.py
unibots_ws/src/unibots_control/: package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_control/launch/: control.launch.py
unibots_ws/src/unibots_control/scripts/: build_mpc_solver.py  mock_obstacle_bridge.py  virtual_ball_node.py
unibots_ws/src/unibots_control/scripts/generated_solver/: CMakeLists.txt  README.html  cpg_solver.py  pyproject.toml
unibots_ws/src/unibots_control/scripts/generated_solver/c/: CMakeLists.txt
unibots_ws/src/unibots_control/scripts/generated_solver/c/include/: cpg_solve.h  cpg_workspace.h
unibots_ws/src/unibots_control/scripts/generated_solver/c/solver_code/: emosqp.c  osqp_configure.h  workspace.c  workspace.h
unibots_ws/src/unibots_control/scripts/generated_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
unibots_ws/src/unibots_control/scripts/generated_solver/cpg_module-0.0.1.dist-info/: RECORD  WHEEL  direct_url.json
unibots_ws/src/unibots_control/scripts/generated_solver/cpp/include/: cpg_module.hpp
unibots_ws/src/unibots_control/scripts/generated_solver/cpp/src/: cpg_module.cpp
unibots_ws/src/unibots_control/unibots_control/: MotorsController_M_bugFix.py  ServoController_MK.py  apf_controller_node.py  hardware_motor_node.py  hardware_servo_node.py  match_button_node.py  mpc_controller_node.py  mpc_problem.py
unibots_ws/src/unibots_description/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_description/config/: robot_controllers.yaml
unibots_ws/src/unibots_description/launch/: display.launch.py
unibots_ws/src/unibots_description/meshes/: Chassi_Unibot.stl
unibots_ws/src/unibots_description/urdf/: robot.xacro
unibots_ws/src/unibots_game/: package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_game/launch/: bt_game.launch.py  (+2 more)
unibots_ws/src/unibots_localization/: package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_localization/config/: apriltag.yaml  ekf.yaml  tags.yaml
unibots_ws/src/unibots_localization/launch/: localization.launch.py
unibots_ws/src/unibots_localization/scripts/: mock_tag_bridge.py
unibots_ws/src/unibots_localization/unibots_localization/: ekf_bridge_node.py
unibots_ws/src/unibots_msgs/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_orchestrator/: CMakeLists.txt  README.md  package.xml
unibots_ws/src/unibots_orchestrator/config/: match_orchestrator.yaml
unibots_ws/src/unibots_orchestrator/launch/: match_orchestrator.launch.py
unibots_ws/src/unibots_orchestrator/src/: match_orchestrator.cpp
unibots_ws/src/unibots_perception/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_perception/config/: perception.yaml
unibots_ws/src/unibots_perception/models/: model.ncnn.param
unibots_ws/src/unibots_perception/src/: detector.cpp  detector.hpp  perception_node.cpp
unibots_ws/src/unibots_robot/: package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_robot_gazebo/: CMakeLists.txt  README.md  REAL_VS_HALLUCINATED.md  package.xml
unibots_ws/src/unibots_sim/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_sim/launch/: full_sim.launch.py  sim.launch.py
unibots_ws/src/unibots_sim/models/ping_pong_ball/: model.config  model.sdf
unibots_ws/src/unibots_sim/models/steel_bearing/: model.config  model.sdf
unibots_ws/src/unibots_sim/worlds/: unibots_arena.sdf
unibots_ws/src/unibots_spatial_memory/: CMakeLists.txt  package.xml
unibots_ws/src/unibots_spatial_memory/config/: spatial_memory.yaml
unibots_ws/src/unibots_spatial_memory/src/: spatial_memory_node.cpp
unibots_ws/src/unibots_ultrasonic/: README.md  package.xml  setup.cfg  setup.py
unibots_ws/src/unibots_ultrasonic/config/: ultrasonic.yaml
unibots_ws/src/unibots_ultrasonic/launch/: ultrasonic.launch.py
unibots_ws/src/unibots_ultrasonic/test/: test_sensor_driver.py
unibots_ws/src/unibots_ultrasonic/unibots_ultrasonic/: sensor_driver.py  ultrasonic_node.py
(+68 files in other folders)
