<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unibots_behavior_tree</name>
  <version>1.0.0</version>
  <description>Behavior tree decision logic for Unibots 2026</description>
  <maintainer email="krishivagrawal7@gmail.com">You</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>