<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unibots_control</name>
  <version>0.1.0</version>
  <description>
    Iterative MPC (iMPC) and APF navigation controllers for the Unibots UK 2026
    holonomic mecanum competition robot (ROS 2 Jazzy / Gazebo Harmonic).
  </description>
  <maintainer email="krishivagrawal7@gmail.com">Krishiv Agrawal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unibots_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
