<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unibots_localization</name>
  <version>0.1.0</version>
  <description>
    Absolute localization for the Unibots UK 2026 mecanum robot: an AprilTag
    bridge that converts tag-relative detections into absolute arena poses, and
    a robot_localization EKF that fuses them with wheel odometry and IMU.
  </description>
  <maintainer email="krishivagrawal7@gmail.com">Krishiv Agrawal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
