<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unibots_orchestrator</name>
  <version>1.0.0</version>
  <description>High-level C++ match strategy state machine for Unibots 2026.</description>
  <maintainer email="krishivagrawal7@gmail.com">Krishiv</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unibots_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
