<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unibots_sim</name>
  <version>0.1.0</version>
  <description>
    Gazebo Harmonic simulation for the Unibots UK 2026 mecanum competition
    robot (ROS 2 Jazzy): arena world, scoring-object models, and the launch
    files that bring up Gazebo, the robot, the ros_gz bridge, RViz, and the
    full localization / control / game stack.
  </description>

  <maintainer email="krishivagrawal7@gmail.com">Krishiv Agrawal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <!-- Sibling workspace packages -->
  <exec_depend>unibots_description</exec_depend>
  <exec_depend>unibots_localization</exec_depend>
  <exec_depend>unibots_control</exec_depend>
  <exec_depend>unibots_game</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
